[package]
name = "mizuno"
version = "0.1.0"
authors = ["Barret Rennie <barret@brennie.ca>"]
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
byteorder = "1.3.1"
failure = "0.1.5"
futures = "0.1.26"
phf = "0.7.24"
tokio = "0.1.18"
tokio-process = "0.2.3"
tokio-io = "0.1.12"

[build-dependencies]
failure = "0.1.5"
phf_codegen = "0.7.24"

[dev-dependencies]
tempdir = "0.3.7"
